# clipperp

./: CMakeLists.txt
bindings/python/: mpi_manager.h  py_clipperplus.cpp  wrapper.h
include/clipperplus/: clipperplus_clique.h  clipperplus_graph.h  clique_optimization.h  parmetis_partition.h
src/: clipperplus_clique.cpp  clipperplus_graph.cpp  demo_clipper.cpp  parmetis_partition.cpp  temp.cpp
test/: clipperplus_test.cpp  main.cpp
test/overlapping test/: run.bat
testData/: filter_adj.py
